module(
    name = "bazel_remote_apis_sdks",
    version = "",
)

bazel_dep(name = "grpc", version = "1.76.0.bcr.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "googleapis", version = "0.0.0-20260130-c0fcb356")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = [
        "gazelle:proto disable_global",
    ],
    path = "github.com/bazelbuild/remote-apis",
)
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_remote_apis",
    "com_github_golang_glog",
    "com_github_google_go_cmp",
    "com_github_google_uuid",
    "com_github_klauspost_compress",
    "com_github_pkg_xattr",
    "org_golang_google_api",
    "org_golang_google_genproto",
    "org_golang_google_genproto_googleapis_bytestream",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
)

# Required by github.com/bazelbuild/remote-apis
inject_repo(go_deps, "googleapis")
