load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "command_proto",
    srcs = ["command.proto"],
    visibility = ["//visibility:public"],
    deps = [
      "@com_google_protobuf//:timestamp_proto",
      "@com_google_protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "command_go_proto",
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/command",
    proto = ":command_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "command",
    embed = [":command_go_proto"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/command",
    visibility = ["//visibility:public"],
)
