load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "command_proto",
    srcs = ["command.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:timestamp_proto",
        "@protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "command_go_proto",
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/command",
    proto = ":command_proto",
    visibility = ["//visibility:public"],
)
