load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "credshelper_proto",
    srcs = ["credshelper.proto"],
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "credshelper_go_proto",
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/credshelper",
    proto = ":credshelper_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "credshelper",
    embed = [":credshelper_go_proto"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/credshelper",
    visibility = ["//visibility:public"],
)
