load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "auxiliary_metadata_proto",
    srcs = ["auxiliary_metadata.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "auxiliary_metadata_go_proto",
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/fakes",
    proto = ":auxiliary_metadata_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "auxpb",
    embed = [":auxiliary_metadata_go_proto"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/fakes",
    visibility = ["//visibility:public"],
)