load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "remotetool_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/cmd/remotetool",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/flags",
        "//go/pkg/outerr",
        "//go/pkg/tool",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "remotetool",
    embed = [":remotetool_lib"],
    visibility = ["//visibility:public"],
)
