load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/cmd/rexec",
    visibility = ["//visibility:private"],
    deps = [
        "//go/flags:go_default_library",
        "//go/pkg/command:go_default_library",
        "//go/pkg/filemetadata:go_default_library",
        "//go/pkg/moreflag:go_default_library",
        "//go/pkg/outerr:go_default_library",
        "//go/pkg/rexec:go_default_library",
        "@com_github_golang_glog//:go_default_library",
    ],
)

go_binary(
    name = "rexec",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
