load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rexec_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/cmd/rexec",
    visibility = ["//visibility:private"],
    deps = [
        "//go/pkg/command",
        "//go/pkg/filemetadata",
        "//go/pkg/flags",
        "//go/pkg/moreflag",
        "//go/pkg/outerr",
        "//go/pkg/rexec",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "rexec",
    embed = [":rexec_lib"],
    visibility = ["//visibility:public"],
)
