load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "actas",
    srcs = ["actas.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/actas",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_test(
    name = "actas_test",
    srcs = ["actas_test.go"],
    embed = [":actas"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
