load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "actas",
    srcs = ["actas.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/actas",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//credentials",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

go_test(
    name = "actas_test",
    srcs = ["actas_test.go"],
    embed = [":actas"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//status",
        "@org_golang_x_oauth2//:oauth2",
    ],
)

alias(
    name = "go_default_library",
    actual = ":actas",
    visibility = ["//visibility:public"],
)
