load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cache.go"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/cache",
    visibility = ["//visibility:public"],
    deps = ["//go/pkg/cache/singleflightcache:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["cache_test.go"],
    embed = [":go_default_library"],
)
