load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cas",
    srcs = [
        "client.go",
        "ioutil.go",
        "upload.go",
    ],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/cas",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/cache",
        "//go/pkg/digest",
        "//go/pkg/retry",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_golang_glog//:glog",
        "@com_github_google_uuid//:uuid",
        "@com_github_klauspost_compress//zstd",
        "@org_golang_google_api//support/bundler",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protowire",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_sync//semaphore",
    ],
)

go_test(
    name = "cas_test",
    srcs = [
        "client_test.go",
        "upload_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":cas"],
    deps = [
        "//go/pkg/digest",
        "//go/pkg/fakes",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ],
)
