load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "casng",
    srcs = [
        "batching.go",
        "config.go",
        "node_slice_cache.go",
        "pubsub.go",
        "streaming_query.go",
        "streaming_upload.go",
        "throttler.go",
        "upload_digester.go",
        "upload_dispatcher.go",
        "uploader.go",
    ],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/casng",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/contextmd",
        "//go/pkg/digest",
        "//go/pkg/errors",
        "//go/pkg/filemetadata",
        "//go/pkg/io/impath",
        "//go/pkg/io/walker",
        "//go/pkg/retry",
        "//go/pkg/symlinkopts",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_klauspost_compress//zstd:go_default_library",
        "@com_github_pborman_uuid//:go_default_library",
        "@com_github_pkg_xattr//:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "cas_test",
    srcs = [
        "batching_query_test.go",
        "batching_upload_test.go",
        "batching_write_bytes_test.go",
        "streaming_query_test.go",
        "util_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        ":casng",
        "//go/pkg/digest",
        "//go/pkg/errors",
        "//go/pkg/io/impath",
        "//go/pkg/io/walker",
        "//go/pkg/retry",
        "//go/pkg/symlinkopts",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
