load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bytestream.go",
        "cas.go",
        "client.go",
        "client_context.go",
        "exec.go",
    ],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/client",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/actas:go_default_library",
        "//go/pkg/balancer:go_default_library",
        "//go/pkg/balancer/proto:go_default_library",
        "//go/pkg/chunker:go_default_library",
        "//go/pkg/digest:go_default_library",
        "//go/pkg/filemetadata:go_default_library",
        "//go/pkg/retry:go_default_library",
        "//go/pkg/tree:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_pborman_uuid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//credentials/oauth:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "batch_retries_test.go",
        "cas_test.go",
        "exec_test.go",
        "retries_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/pkg/chunker:go_default_library",
        "//go/pkg/digest:go_default_library",
        "//go/pkg/fakes:go_default_library",
        "//go/pkg/filemetadata:go_default_library",
        "//go/pkg/portpicker:go_default_library",
        "//go/pkg/retry:go_default_library",
        "//go/pkg/tree:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
