load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "bytestream.go",
        "capabilities.go",
        "cas.go",
        "cas_download.go",
        "cas_upload.go",
        "client.go",
        "exec.go",
        "status.go",
        "tree.go",
    ],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/client",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api/command",
        "//go/pkg/actas",
        "//go/pkg/balancer",
        "//go/pkg/balancer/proto",
        "//go/pkg/casng",
        "//go/pkg/chunker",
        "//go/pkg/command",
        "//go/pkg/contextmd",
        "//go/pkg/digest",
        "//go/pkg/filemetadata",
        "//go/pkg/io/impath",
        "//go/pkg/io/walker",
        "//go/pkg/retry",
        "//go/pkg/uploadinfo",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_klauspost_compress//zstd:go_default_library",
        "@com_github_mostynb_zstdpool_syncpool//:go_default_library",
        "@com_github_pborman_uuid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//credentials/oauth:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
        "@org_golang_google_protobuf//encoding/protowire:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/known/durationpb:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
        "@org_golang_x_sync//semaphore:go_default_library",
    ],
)

go_test(
    name = "client_test",
    srcs = [
        "batch_retries_test.go",
        "bytestream_test.go",
        "cas_test.go",
        "client_test.go",
        "exec_test.go",
        "retries_test.go",
        "tree_test.go",
        "tree_whitebox_test.go",
    ],
    embed = [":client"],
    deps = [
        "//go/pkg/chunker",
        "//go/pkg/command",
        "//go/pkg/digest",
        "//go/pkg/fakes",
        "//go/pkg/filemetadata",
        "//go/pkg/portpicker",
        "//go/pkg/retry",
        "//go/pkg/uploadinfo",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver:semver_go_proto",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@com_github_klauspost_compress//zstd:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
        "@org_golang_google_protobuf//types/known/anypb:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
