load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "bytestream.go",
        "capabilities.go",
        "cas.go",
        "cas_download.go",
        "cas_upload.go",
        "client.go",
        "exec.go",
        "status.go",
        "tree.go",
    ],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/pkg/client",
    visibility = ["//visibility:public"],
    deps = [
        "//go/api/command",
        "//go/pkg/actas",
        "//go/pkg/balancer",
        "//go/pkg/chunker",
        "//go/pkg/command",
        "//go/pkg/contextmd",
        "//go/pkg/digest",
        "//go/pkg/filemetadata",
        "//go/pkg/retry",
        "//go/pkg/uploadinfo",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_golang_glog//:glog",
        "@com_github_google_uuid//:uuid",
        "@com_github_klauspost_compress//zstd",
        "@org_golang_google_genproto//googleapis/longrunning",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_genproto_googleapis_rpc//errdetails",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/oauth",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//encoding/protowire",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_sync//semaphore",
    ],
)

go_test(
    name = "client_test",
    srcs = [
        "batch_retries_test.go",
        "bytestream_test.go",
        "cas_test.go",
        "client_test.go",
        "exec_test.go",
        "retries_test.go",
        "tree_test.go",
        "tree_whitebox_test.go",
    ],
    embed = [":client"],
    deps = [
        "//go/api/command",
        "//go/pkg/chunker",
        "//go/pkg/command",
        "//go/pkg/digest",
        "//go/pkg/fakes",
        "//go/pkg/filemetadata",
        "//go/pkg/portpicker",
        "//go/pkg/retry",
        "//go/pkg/uploadinfo",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver:semver_go_proto",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_klauspost_compress//zstd",
        "@org_golang_google_genproto//googleapis/longrunning",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_x_sync//errgroup",
    ],
)
